syntax = "proto3";

package pb;

option go_package = "github.com/trantho123/CRUD-gRPC/api/pb";

import "google/protobuf/timestamp.proto";

service PostService {
    rpc CreatePost(CreatePostRequest) returns (PostResponse) {}
    rpc GetPost(PostRequest) returns (PostResponse){}
    rpc GetPosts(GetPostsRequest) returns (stream Post) {}
    rpc UpdatePost(UpdatePostRequest) returns (PostResponse) {}
    rpc DeletePost(PostRequest) returns (DeletePostResponse) {}
}

message GetPostsRequest {
  optional int64 page = 1;
  optional int64 limit = 2;
}

message PostRequest { string Id = 1; }

message DeletePostResponse { bool success = 1; }

message UpdatePostRequest {
  string Id = 1;
  optional string Title = 2;
  optional string Content = 3;
  optional string Image = 4;
  optional string User = 5;
}

message CreatePostRequest {
  string Title = 1;
  string Content = 2;
  string Image = 3;
  string User = 4;
}

message Post {
  string Id = 1;
  string Title = 2;
  string Content = 3;
  string Image = 4;
  string User = 5;
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;
}

message PostResponse { Post post = 1; }